tests/semantic/invalid/13_continue_outside_loop.tc
// ERR_CONTINUE_OUTSIDE_LOOP: continue statement not inside a loop
int main(void) {
    continue;
    return 0;
}
